--- a/src/www/pages/Welcome/Welcome.module.less
+++ b/src/www/pages/Welcome/Welcome.module.less
@@ -1,3 +1,11 @@
+.app {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .box {
     width: 100%;
     height: 100%;
