feat: UI almost completed

--- a/src/www/pages/Welcome/Welcome.module.less
+++ b/src/www/pages/Welcome/Welcome.module.less
@@ -214,3 +214,9 @@
     height: 1.2em;
     white-space: nowrap;
 }
+
+.disconnect {
+    margin-left: 30px;
+    font-size: 16px;
+    text-decoration: underline;
+}
