feat: wallet added

--- a/src/www/pages/DefineProject/DefineProject.css
+++ b/src/www/pages/DefineProject/DefineProject.css
@@ -2,6 +2,10 @@
   font-size: 18px;
 }
 
+.top-marg {
+  margin-top: 10px;
+}
+
 .form-title-div {
   margin-top: 15px;
   background-color: #E7ECEF;
