--- a/src/www/pages/Welcome/Welcome.module.less
+++ b/src/www/pages/Welcome/Welcome.module.less
@@ -7,8 +7,16 @@
     flex-direction: column;
 }
 
+.shadowText {
+    text-shadow: 2px 2px #6c5959;
+}
+
 .titleDecoration {
     text-align: center;
+    width: 80%;
+    border-radius: 10px;
+    padding: 25px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 18px 0px;
 }
 
 .titleClients {
